FIX: dark mode for all.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,8 @@
 /* GENERALI */
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0a0a0a;
+  --foreground: #ededed;
   --color-primary: #1f2b32;
   --color-secondary: #00453e;
   --color-accent: #ec9929;
